--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/i18n": "^7.0.1",
     "@nuxtjs/style-resources": "^1.0.0",
@@ -28,6 +29,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "@nuxtjs/svg": "^0.1.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
@@ -39,7 +41,6 @@
     "sass-loader": "^10.1.1",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
-    "@nuxtjs/svg": "^0.1.12"
+    "stylelint-config-standard": "^20.0.0"
   }
 }
