--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/i18n": "^7.0.1",
     "@nuxtjs/style-resources": "^1.0.0",
@@ -20,6 +19,7 @@
     "date-fns": "^2.23.0",
     "nuxt": "^2.14.12",
     "nuxt-i18n": "^6.20.2",
+    "papaparse": "^5.3.1",
     "vue-select": "^3.11.2"
   },
   "devDependencies": {
