--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/i18n": "^7.0.1",
     "@nuxtjs/style-resources": "^1.0.0",
